--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1>We’re a <span style="color: #34C531;">Software house</span> that delivers <br>the perfect tech experience</h1>
+      <h1>We’re a <span style="color: #20e31d;">Software house</span> that delivers the perfect tech experience</h1>
       <p class="para">- Excellence in Every Connection: Uniting Fintech, CRM, and Telecom for a Brighter Future.</p>
       <div class="buttons">
         <a href="contact.html"><button>Contact Us <img src="Images/arrow-right.png" alt=""></button></a>
