--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <!-- swiper ends here -->
 
-      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
 
     </section>
 
