--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <!-- swiper ends here -->
 
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+      <script src="Js/swiper.js" defer></script>
 
     </section>
 
