--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <!-- swiper ends here -->
       
-      <script src="JS/app.js" defer></script>
+      <script src="JS/app.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
       <script src="Js/swiper.js" defer></script>
 
