--- a/services.html
+++ b/services.html
@@ -244,7 +244,7 @@
       </div>
 
       <div class="rightBox">
-        <img src="Images/support1.jpg" alt="feature-image" class="image">
+        <img src="Images/Support1.jpg" alt="feature-image" class="image">
         <div class="service-extra-info">
           <div class="content-box">
             <h3><i class='bx bxs-right-arrow'></i>Our Services</h3>
