Made some necessary changes and enhanced website look and feel.

--- a/about.html
+++ b/about.html
@@ -50,9 +50,8 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1>About <span style="color: #34C531;">Us</span></h1>
-      <p class="para">As a proactive technology partner, we understand the needs of our clients and design our offerings
-        based on the <br> market trends and emerging nature or telecom technologies</p>
+      <h1>About <span>Us</span></h1>
+      <p class="para">As a proactive technology partner, we understand the needs of our clients and design our offerings based on the market trends and telecom technologies.</p>
     </section>
 
     <!-- Header banner here -->
