--- a/careers.html
+++ b/careers.html
@@ -50,10 +50,8 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1>Ignite Your <span style="color: #34C531;">Career</span> With US</h1>
-      <p class="para">Kafaaya contributes towards the ever growing business needs, by providing tailor made solutions
-        which works best <br> in business enterprises. Our broad software solution portfolio makes it easy for our
-        clients to choose what suits their business needs.</p>
+      <h1>Ignite Your <span>Career</span> With US</h1>
+      <p class="para">Our broad software solution portfolio makes it easy for our clients to choose <br> what suits their business needs.</p>
     </section>
 
     <!-- Header banner here -->
@@ -74,12 +72,8 @@
         </p>
       </section>
       <section class="career-card-container">
-        
-        <div class="no-vacancies" style="width: 100%; margin: 100px auto;">
-          <h2 style="text-align: center; font-size: 2.4rem; font-weight: 500; color: rgb(212, 212, 212);">No Vacancies Available :(</h2>
-        </div>
       
-        <div class="container container1" style="display: none;">
+        <div class="container container1">
           <div class="career-card card1">
             <div class="header">
               <div class="iconBox">
@@ -137,7 +131,7 @@
             </div>
           </div>
         </div>
-        <div class="container container2" style="display: none;">
+        <div class="container container2">
           <div class="career-card card1">
             <div class="header">
               <div class="iconBox">
@@ -170,24 +164,6 @@
               <p>If you're a coding wizard with expertise in front-end and back-end development, and have experience
                 with
                 frameworks like React, Angular, or Node.js.</p>
-            </div>
-            <div class="buttons">
-              <button>Apply Now <i class='bx bxs-right-arrow-circle bx-flip-vertical'></i></button>
-            </div>
-          </div>
-          <div class="career-card card3">
-            <div class="header">
-              <div class="iconBox">
-                <img src="images/career-icon.png" alt="">
-              </div>
-              <div class="heading">
-                <h3>Software Tester</h3>
-                <p>India</p>
-              </div>
-            </div>
-            <div class="content">
-              <p>A software tester is a quality assurance professional who works to ensure that software functions as
-                intended and is fit for purpose. They work in a variety of industries, including healthcare.</p>
             </div>
             <div class="buttons">
               <button>Apply Now <i class='bx bxs-right-arrow-circle bx-flip-vertical'></i></button>
