--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1><span style="color: #34C531;">Contact</span> Us</h1>
+      <h1><span>Contact</span> Us</h1>
       <p class="para"> Discover the reasons why working at Apex is more than a job—it's an opportunity to be part of a
         dynamic team, <br> unleash your potential, and contribute to shaping the future of digital innovation.</p>
     </section>
