--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1>We’re a <span style="color: #20e31d;">Software house</span> that delivers the perfect tech experience</h1>
+      <h1>We’re a <span>Software house</span> that delivers the perfect tech experience</h1>
       <p class="para">- Excellence in Every Connection: Uniting Fintech, CRM, and Telecom for a Brighter Future.</p>
       <div class="buttons">
         <a href="contact.html"><button>Contact Us <img src="Images/arrow-right.png" alt=""></button></a>
@@ -103,6 +103,9 @@
 
   </header>
 
+    <div class="aesthetic-element left"></div>
+    <div class="aesthetic-element right"></div>
+
   <!-- main section starts -->
   <main class="main-container">
 
@@ -111,7 +114,7 @@
       <section class="main-heading">
         <label class="feature-label">Products</label>
         <h2>We got some <span>amazing products</span> for you</h2>
-        <p class="para">Learn how you can make best out of our products</p>
+        <p class="para">- Learn how you can make best out of our products</p>
       </section>
       <section class="products-card-container">
         <div class="product-card">
