--- a/kafaaya-policy.html
+++ b/kafaaya-policy.html
@@ -48,7 +48,7 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1 style="font-size: 2.2rem;margin-top: 20px;">Kafaaya Workplace <span style="color: #34C531;">Policy</span></h1>
+      <h1 style="font-size: 2.2rem;margin-top: 20px;">Kafaaya Workplace <span>Policy</span></h1>
       <p class="para"> At Kafaaya, we believe in empowering every individual to bring their best, both personally and professionally. <br> Our workplace thrives on collaboration, creativity, and mutual respect, where every voice matters and innovation is fueled by diversity.</p>
     </section>
 
