--- a/portfolio.html
+++ b/portfolio.html
@@ -50,10 +50,8 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1>Know Our <span style="color: #34C531;">Portfolio</span></h1>
-      <p class="para">Kafaaya contributes towards the ever growing business needs, by providing tailor made solutions
-        which works best <br> in business enterprises. Our broad software solution portfolio makes it easy for our
-        clients to choose what suits their business needs.</p>
+      <h1>Know Our <span>Portfolio</span></h1>
+      <p class="para">Kafaaya contributes towards the ever growing business needs, by providing tailor made solutions which works best in business enterprises.</p>
     </section>
 
     <!-- Header banner here -->
