--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
     </section>
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1>We have got some <span style="color: #34C531;">amazing <br>products</span> for you</h1>
+      <h1>We have got some <span>amazing <br>products</span> for you</h1>
       <p class="para">- Learn how you can make best out of our products</p>
     </section>
 
