--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
 
     <!-- Main heading here -->
     <section class="main-heading w-92">
-      <h1>Our Realm of <span style="color: #34C531;">Services</span></h1>
+      <h1>Our Realm of <span>Services</span></h1>
       <p class="para">Mastering Innovation: Delivering Best-in-Class Fintech, CRM, and Telecom Services for
         <br>Unmatched Quality and Seamless Connectivity.
       </p>
