--- a/careers.html
+++ b/careers.html
@@ -61,6 +61,9 @@
 
   </header>
 
+    <div class="aesthetic-element top"></div>
+
+
   <!-- main section starts -->
   <main class="main-container">
     <section class="career-container w-92">
