--- a/products.html
+++ b/products.html
@@ -54,6 +54,9 @@
 
   </header>
 
+        <div class="aesthetic-element top"></div>
+
+
   <!-- main section starts -->
   <main class="main-container">
 
