Resolved image path issue.

--- a/careers.html
+++ b/careers.html
@@ -80,7 +80,7 @@
           <div class="career-card card1">
             <div class="header">
               <div class="iconBox">
-                <img src="images/career-icon.png" alt="">
+                <img src="Images/career-icon.png" alt="career-icon">
               </div>
               <div class="heading">
                 <h3>Full Stack Developer</h3>
@@ -99,7 +99,7 @@
           <div class="career-card card2">
             <div class="header">
               <div class="iconBox">
-                <img src="images/career-icon.png" alt="">
+                <img src="Images/career-icon.png" alt="career-icon">
               </div>
               <div class="heading">
                 <h3>Project Manager</h3>
@@ -117,7 +117,7 @@
           <div class="career-card card3">
             <div class="header">
               <div class="iconBox">
-                <img src="images/career-icon.png" alt="">
+                <img src="Images/career-icon.png" alt="career-icon">
               </div>
               <div class="heading">
                 <h3>Frontend Developer</h3>
@@ -138,7 +138,7 @@
           <div class="career-card card1">
             <div class="header">
               <div class="iconBox">
-                <img src="images/career-icon.png" alt="">
+                <img src="Images/career-icon.png" alt="career-icon">
               </div>
               <div class="heading">
                 <h3>UI/UX Designer</h3>
@@ -156,7 +156,7 @@
           <div class="career-card card2">
             <div class="header">
               <div class="iconBox">
-                <img src="images/career-icon.png" alt="">
+                <img src="Images/career-icon.png" alt="career-icon">
               </div>
               <div class="heading">
                 <h3>Backend Developer</h3>
